[gd_scene load_steps=50 format=3 uid="uid://deypg4htvxsn3"]

[ext_resource type="Script" path="res://scenes/game_scene/slimes/slime.gd" id="1_rj8rp"]
[ext_resource type="Texture2D" uid="uid://c5rpgu4sa21m" path="res://assets/sprites/slime.png" id="2_ikgkn"]
[ext_resource type="PackedScene" uid="uid://cguavmce3qee4" path="res://scenes/game_scene/elements/element.tscn" id="3_xkqwo"]
[ext_resource type="PackedScene" uid="uid://d1bfmdsnal6pj" path="res://scenes/game_scene/vacuum/vacuumable.tscn" id="4_kbfou"]
[ext_resource type="PackedScene" uid="uid://ridxevwf7yqc" path="res://scenes/game_scene/ui/bar.tscn" id="5_nhxvo"]
[ext_resource type="Texture2D" uid="uid://bae618o7ulkob" path="res://assets/sprites/stun_anim.png" id="6_3vpt6"]
[ext_resource type="Texture2D" uid="uid://nbmwy7is1gvu" path="res://assets/sprites/slime_killed_anim.png" id="7_jtpwy"]
[ext_resource type="PackedScene" uid="uid://c6ou3wr6f8c2n" path="res://scenes/game_scene/elements/fire/flammable.tscn" id="8_kqo0w"]
[ext_resource type="Texture2D" uid="uid://do3xka86qkli5" path="res://assets/sprites/slime_death.png" id="8_vpuxc"]
[ext_resource type="PackedScene" uid="uid://re0untg3gyy8" path="res://scenes/game_scene/elements/lightning/joltable.tscn" id="9_ajclt"]
[ext_resource type="Script" path="res://scenes/game_scene/slimes/death_anim.gd" id="9_jcjys"]
[ext_resource type="Script" path="res://scenes/game_scene/slimes/particle_explosion.gd" id="11_lfpce"]
[ext_resource type="PackedScene" uid="uid://c5dpiko1evojg" path="res://scenes/game_scene/elements/slime/slimeable.tscn" id="12_a2yl3"]
[ext_resource type="PackedScene" uid="uid://cvq8uxvopg1vr" path="res://scenes/game_scene/particles/score_particle.tscn" id="12_yvajo"]
[ext_resource type="AudioStream" uid="uid://ngsyf51utg06" path="res://assets/audio/sfx/slime hit.wav" id="15_enx8f"]
[ext_resource type="AudioStream" uid="uid://dvqvjyhb6otd4" path="res://assets/audio/sfx/slime_stun.wav" id="16_1yqyw"]
[ext_resource type="AudioStream" uid="uid://bslcfnvy0d3ds" path="res://assets/audio/sfx/slime_death.wav" id="17_7p6k7"]
[ext_resource type="FontFile" uid="uid://cps7wwwrgo0ch" path="res://assets/fonts/Yesterday Basic 10h.ttf" id="18_4tq15"]
[ext_resource type="Script" path="res://scenes/game_scene/slimes/can_be_vacuumed.gd" id="19_lfkif"]

[sub_resource type="AtlasTexture" id="AtlasTexture_y2yfw"]
atlas = ExtResource("2_ikgkn")
region = Rect2(0, 0, 22, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_lrpvh"]
atlas = ExtResource("2_ikgkn")
region = Rect2(22, 0, 22, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_hxfrn"]
atlas = ExtResource("2_ikgkn")
region = Rect2(44, 0, 22, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_ndg4h"]
atlas = ExtResource("2_ikgkn")
region = Rect2(66, 0, 22, 20)

[sub_resource type="SpriteFrames" id="SpriteFrames_ew8w5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y2yfw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lrpvh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hxfrn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ndg4h")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_x775c"]
radius = 8.0

[sub_resource type="AtlasTexture" id="AtlasTexture_1p7xb"]
atlas = ExtResource("6_3vpt6")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ox5j7"]
atlas = ExtResource("6_3vpt6")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_g8bd4"]
atlas = ExtResource("6_3vpt6")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_76h4h"]
atlas = ExtResource("6_3vpt6")
region = Rect2(72, 0, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_7tfjw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1p7xb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ox5j7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g8bd4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_76h4h")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_heiie"]
atlas = ExtResource("7_jtpwy")
region = Rect2(0, 0, 26, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_yeva6"]
atlas = ExtResource("7_jtpwy")
region = Rect2(26, 0, 26, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_cdu5r"]
atlas = ExtResource("7_jtpwy")
region = Rect2(52, 0, 26, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_7tlth"]
atlas = ExtResource("7_jtpwy")
region = Rect2(0, 26, 26, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_llivd"]
atlas = ExtResource("7_jtpwy")
region = Rect2(26, 26, 26, 26)

[sub_resource type="SpriteFrames" id="SpriteFrames_l0t0v"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_heiie")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yeva6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cdu5r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7tlth")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_llivd")
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"poof",
"speed": 15.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_43b8u"]
atlas = ExtResource("8_vpuxc")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_eqeh7"]
atlas = ExtResource("8_vpuxc")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_24aio"]
atlas = ExtResource("8_vpuxc")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ik76"]
atlas = ExtResource("8_vpuxc")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hbqtl"]
atlas = ExtResource("8_vpuxc")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ngucq"]
atlas = ExtResource("8_vpuxc")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_doruw"]
atlas = ExtResource("8_vpuxc")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e6drv"]
atlas = ExtResource("8_vpuxc")
region = Rect2(32, 64, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_man3r"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_43b8u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eqeh7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_24aio")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ik76")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hbqtl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ngucq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_doruw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e6drv")
}],
"loop": false,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="LabelSettings" id="LabelSettings_8mv42"]
line_spacing = -5.0
font = ExtResource("18_4tq15")
font_color = Color(0.709804, 0.709804, 0.709804, 1)
outline_size = 8
outline_color = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_npg8w"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanBeVacuumed:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanBeVacuumed:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-47, -11)]
}

[sub_resource type="Animation" id="Animation_jh7b0"]
resource_name = "pop_in"
length = 1.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanBeVacuumed:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 1, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanBeVacuumed:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.12, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-47, -11), Vector2(-47, -37), Vector2(-47, -31)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2oppl"]
_data = {
"RESET": SubResource("Animation_npg8w"),
"pop_in": SubResource("Animation_jh7b0")
}

[node name="Slime" type="CharacterBody2D"]
z_index = 2
collision_layer = 8
collision_mask = 9
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_rj8rp")
speed = 450.0

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_ew8w5")
autoplay = "default"
frame_progress = 0.437271

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_x775c")

[node name="Element" parent="." instance=ExtResource("3_xkqwo")]

[node name="Vacuumable" parent="." instance=ExtResource("4_kbfou")]
can_be_eaten = false
resistance = 1000
value = 10

[node name="Bar" parent="." instance=ExtResource("5_nhxvo")]
position = Vector2(0, -14)
max = 40
value = 40
is_health_bar = true
can_be_hit_by_bullet = true

[node name="StunAnim" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(0, 1)
sprite_frames = SubResource("SpriteFrames_7tfjw")
autoplay = "default"
frame_progress = 0.155916

[node name="StunPoofAnim" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_l0t0v")
animation = &"poof"
frame = 6
frame_progress = 1.0

[node name="DeathAnim" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_man3r")
script = ExtResource("9_jcjys")

[node name="Flammable" parent="." instance=ExtResource("8_kqo0w")]
visible = false

[node name="Joltable" parent="." instance=ExtResource("9_ajclt")]

[node name="ParticleExplosion" type="Node2D" parent="."]
script = ExtResource("11_lfpce")
particle_scene = ExtResource("12_yvajo")
velocity_min = 150.0
velocity_max = 200.0

[node name="Slimeable" parent="." instance=ExtResource("12_a2yl3")]

[node name="SlimeHitSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("15_enx8f")
volume_db = -5.0
attenuation = 0.420448

[node name="SlimeStunSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("16_1yqyw")
volume_db = 5.0

[node name="SlimeDeathSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("17_7p6k7")

[node name="CanBeVacuumed" type="Label" parent="."]
modulate = Color(1, 1, 1, 0)
z_index = 31
offset_left = -47.0
offset_top = -11.0
offset_right = 46.0
offset_bottom = 16.0
scale = Vector2(0.5, 0.5)
pivot_offset = Vector2(49, 13)
text = "Can be
vacuumed!"
label_settings = SubResource("LabelSettings_8mv42")
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("19_lfkif")

[node name="CanBeVacuumedAnim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_2oppl")
}

[connection signal="animation_finished" from="DeathAnim" to="DeathAnim" method="_on_animation_finished"]
